--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <footer>
     <p class="atribucion">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">iGor McLven</a>.
+      Coded by <a href="https://github.com/igormclven/four-card-feature-section-master">iGor McLven</a>.
     </p>
   </footer>
 </body>
